# ts-auth

./: .env.example  .gitignore  .prettierignore  40-env.sh  Dockerfile  README.md  api.html  default.conf.template  health.html  index.html  maintenance.html  manifest.json  nginx.conf  package.json  pnpm-lock.yaml  robots.txt  service-worker.js  signin.html  sitemap.xml  svelte.config.js  tailwind.config.cjs  vite.config.js  vite.config.ts
.github/workflows/: web.yml
_app/: env.js  version.json
_app/immutable/assets/: 0.B_A61jds.css  0.BiXNTMI0.css  0.BnpVWbv0.css  0.D7oodU7C.css  0.DNlLC8fP.css  0.DblT1yl_.css  0.ORXG8rcX.css  0.qVwlyiaW.css  0.vWVFh8Eh.css  _layout.BIcilCD9.css  _layout.BTO1l8uh.css  _layout.BTkkLAwY.css  _layout.BbEOpMjd.css  _layout.BvSCYaj_.css  _layout.CQNDlnlW.css  _layout.CTrRyKy_.css  _layout.D9wy-n3B.css  _layout.DFkbDy-Q.css
_app/immutable/chunks/: 2O6vECAj.js  9Y3Zi9LS.js  B40CaONp.js  B4hHVZ4A.js  BAGX8FWs.js  BIB2KXTs.js  BIi6zqi6.js  BSYeQ--7.js  BVUUHFFa.js  BdKRVwFY.js  BiGx9tMp.js  BlFdF53H.js  Bluxw1Nt.js  Buo9Rh-V.js  By5vjJJ4.js  C2GVKlbb.js  CB7uGllH.js  CLOYg5p6.js  COB5_kvU.js  (+242 more)
helm/auth/: values.yaml
helm/auth-ui/: README.md  values.yaml
helm/drive-ui/: Chart.yaml
internal/: env.js  version.json
messages/: en.json
project.inlang/: project_id
src/: app.css  app.d.ts  app.html  app.postcss  hooks.server.ts  hooks.ts  service-worker.ts
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/lib/: errors.ts  i18n.ts  localStorageState.svelte.ts  util.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts
(+655 files in other folders)
