[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "auth"
description = "A Tauri App"
edition = "2021"
license = ""
name = "auth"
repository = ""
rust-version = "1.72"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = {version = "2.0.0-alpha.11", features = []}

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "2.0.0-alpha.17", features = []}

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
